--- a/main.scss
+++ b/main.scss
@@ -68,6 +68,10 @@ body {
             &.winner {
                 background-position: 0 100%;
             }
+
+            &.wow {
+                background-position: calc(100% - 1px) 0;
+            }
         }
     }
 
