feat(minesweeper): get reset button to work

--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@ body {
     background-image: url('https://www.cnews.cz/wp-content/uploads/2017/05/windows-xp-wallpaper.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 .button {
